modules/networking/main.tf
module "vpc" {
  source = "terraform-aws-modules/vpc/aws"
  name                             = "suoncha-vpc"
  cidr                             = "10.0.0.0/16"
  azs                              = ["ap-southeast-1a"]
  public_subnets                   = ["10.0.1.0/24"]
  create_database_subnet_group     = false

  tags = {
    Environment = "production"
  }
}

resource "aws_security_group" "proxy_group" {
  name        = "proxy_group"
  description = "Public servers which act as proxy servers"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "proxy_group"
  }
}
